RESOLVED FIXED53884
media/video-document-types.html sometimes crashes the WebProcess
https://bugs.webkit.org/show_bug.cgi?id=53884
Summary media/video-document-types.html sometimes crashes the WebProcess
Maciej Stachowiak
Reported 2011-02-06 11:43:57 PST
media/video-document-types.html sometimes crashes the WebProcess
Attachments
Patch (1.25 KB, patch)
2011-02-06 11:45 PST, Maciej Stachowiak
koivisto: review+
Maciej Stachowiak
Comment 1 2011-02-06 11:45:03 PST
Antti Koivisto
Comment 2 2011-02-06 12:00:42 PST
r=me
Maciej Stachowiak
Comment 3 2011-02-06 12:05:47 PST
Note You need to log in before you can comment on or make changes to this bug.