2011-02-06  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Antti Koivisto.

        media/video-document-types.html sometimes crashes the WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=53884

        No new tests. Already covered by media/video-document-types.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::userCancelledLoad): Stop the load timer
        when cancelling the load.


git-svn-id: svn://svn.chromium.org/blink/trunk@77776 bbb929c8-8fbe-4397-9dbb-9b2b20218538